--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-transformers
-gdown
-torch
-torchvision
-torchaudio
-numpy
-fastapi
-uvicorn
-gitpython 
-requests
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.5.1
+transformers==4.47.1
+fastapi==0.115.6
+uvicorn[standard]==0.35.0
+numpy==2.2.1
